# big-button-printer

./: .gitignore  README.md
box/: bracket-external.stl  bracket-internal.stl  bracket.3mf  bracket.FCStd  bracket.FCStd1
electronic/: platformio.ini
electronic/big-button-printer/: .gitignore  platformio.ini
electronic/big-button-printer/data/: line.raw  quentin.raw  rocky.raw
electronic/big-button-printer/plop/: BigButtonPrinter.cpp  BigButtonPrinter.h  ButtonManager.cpp  ButtonManager.h  Config.h  IManager.h  LedManager.cpp  LedManager.h  PrintService.cpp  PrintService.h  WiFiManager.cpp  WiFiManager.h  main.cpp  rocky.h
electronic/big-button-printer/src/: HttpService.cpp  HttpService.h  LedManager.cpp  LedManager.h  PrintService.cpp  PrintService.h  TPrinter.cpp  TPrinter.h  img.h  lines.h  main.cpp  rocky.h
electronic/src/: main.cpp
firmware/: platformio.ini
firmware/data/: logo.raw
firmware/src/: HttpService.cpp  HttpService.h  main.cpp
server/big-button-printer-server/: pyproject.toml
server/big-button-printer-server/script/: README.md  convert.py  generate_cpp_code.py  generate_raw.py
utils/: pyproject.toml
utils/scripts/: README.md  convert.py  generate_raw.py
